--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,19 @@
 services:
   web:
     build: .
-    # ports:
-    #   - "5001:5001"
+    ports:
+      - "5001:5001"
     volumes:
       - .:/app
+    environment:
+      - SECRET_KEY=
+      - SENDER_PHONE=
+      - SENDER_ZIP=
+      - SENDER_ADDRESS=
+      - SENDER_NAME=
+      - BILLING_CUSTOMER_CODE=
+      - FREIGHT_MANAGEMENT_NUMBER=
+      - DEFAULT_ITEM_NAME=
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=traefik_net"
