--- a/compose.yaml
+++ b/compose.yaml
@@ -10,7 +10,7 @@ services:
       - "traefik.docker.network=traefik_net"
       - "traefik.http.routers.shopping-to-b2.tls=true"
       - "traefik.http.routers.shopping-to-b2.service=shopping-to-b2"
-      - "traefik.http.routers.shopping-to-b2.rule=Host(`shopping-to-b2.tera.officeiko.co.jp`)"
+      - "traefik.http.routers.shopping-to-b2.rule=Host(`shopping-to-b2.${TS_HOST}.officeiko.co.jp`)"
       - "traefik.http.routers.shopping-to-b2.tls.certresolver=tsresolver"
       - "traefik.http.services.shopping-to-b2.loadbalancer.server.port=5001"
     networks:
